# CVSPipeline

./: .gitignore  CMakeLists.txt  README.md
common/: CMakeLists.txt
common/include/cvs/common/: configuration.hpp  factory.hpp
common/src/: configuration.cpp  factory.cpp
include/common/: factory.hpp
include/cvs/pipeline/: ipipeline.hpp
install/: CVSPipelineConfig.cmake.in
libmain/: CMakeLists.txt
libmain/src/: main.cpp
pipeline/: CMakeLists.txt
pipeline/include/cvs/config/: config.h  config_base.hpp  config_utils.hpp
pipeline/include/cvs/pipeline/: dataCounter.hpp  ielement.hpp  iexecutionNode.hpp  iexecutiongraph.hpp  iexecutionnode.hpp  imodule.hpp  imodulemanager.hpp  ipipeline.hpp  iview.hpp  registrationHelper.hpp  registrationhelper.hpp
pipeline/include/cvs/pipeline/impl/: guiPipeline.hpp  moduleManager.hpp  modulemanager.hpp  pipeline.hpp
pipeline/include/cvs/pipeline/tbb/: tbbBroadcastNode.hpp  tbbBufferNode.hpp  tbbBufferTemplateNode.hpp  tbbContinueNode.hpp  tbbDefinitions.hpp  tbbFlowGraph.hpp  tbbFunctionNode.hpp  tbbHelpers.hpp  tbbJoinNode.hpp  tbbMultifunctionNode.hpp  tbbOverwriteNode.hpp  tbbQueueNode.hpp  tbbSourceNode.hpp  tbbSplitNode.hpp  tbbView.hpp  tbbbroadcastnode.hpp  tbbcontinuenode.hpp  tbbdefinitions.hpp  tbbflowgraph.hpp  tbbfunctionnode.hpp  tbbhelpers.hpp  tbbjoinnode.hpp  tbbsourcenode.hpp  tbbsplitnode.hpp  tbbview.hpp
pipeline/src/config/: config.cpp
pipeline/src/pipeline/: dataCounter.cpp  guiPipeline.cpp  imodule.cpp  moduleManager.cpp  modulemanager.cpp  modulemanager.hpp  pipeline.cpp  pipeline.hpp  registrationHelper.cpp  registrationhelper.cpp
pipeline/src/pipeline/tbb/: tbbDefinitions.cpp  tbbFlowGraph.cpp  tbbHelpers.cpp  tbbdefinitions.cpp  tbbflowgraph.cpp  tbbhelpers.cpp
src/pipeline/: pipeline.cpp  pipeline.hpp
test/: CMakeLists.txt  config_test.cpp  main.cpp  module.cpp
test/elementtest/: CMakeLists.txt  cvselement.cpp
test/moduletest/: CMakeLists.txt  main.cpp  modulemanagertest.cpp  pipelineTest.cpp
test/moduletest/dummymodules/: CMakeLists.txt  dummyA.cpp  dummyB.cpp  dummyC.cpp  module.cpp
test/tbbtest/: CMakeLists.txt
test/tbbtest/src/: graphtest.cpp  guiTest.cpp
tool/: CMakeLists.txt
tool/src/: cvspipelinetool.cpp
tools/: CMakeLists.txt
tools/configurator/: CMakeLists.txt  comboItemDelegate.cpp  comboItemDelegate.hpp  headerProxyModel.cpp  headerProxyModel.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
tools/info/: CMakeLists.txt
tools/info/src/: main.cpp
tools/tool/: CMakeLists.txt
